@@ -18,6 +18,7 @@
 - added: a new config item `default-request-maxkeys : 33` for restricting query max. keys
 - added: a new config item `logger : false` which enables logging for Middleware, Schemas and Operations
 - added: `SchemaOptions` and `OperationOptions` supports `$.cancel()` method
+- added: `CACHE(name, [value], [expire], [persistent])` alias for `F.cache.get2()` and `F.cache.set()` or `F.cache.set2()`
 
 - updated: `debug` mode creates a `start_name_script.pid` instead of `debug.pid`
 - updated: `NEWOPERATION()` supports `repeat`, `stop` and `binderror` arguments (more in docs)
